# mini_mips

./: CMakeLists.txt  FindSDL2.cmake
assembly_files/: matrix_3x3.asm
mini_mips/: README.md
mini_mips/assembly_files/: assembly_file_1.asm  assembly_file_2.asm  bressenham_line.asm  screen_test.asm  space_invader_animation.asm  syracuse.asm
mini_mips/src/asm2bin/: CMakeLists.txt  asm2bin.cpp  assembly_converter.cpp
mini_mips/src/demo/: CMakeLists.txt  asm2bin_demo.cpp  emulator_demo.cpp  emulator_perf.cpp
mini_mips/src/emulator/: binary_processor.h  bitmap_screen_renderer.cpp  bitmap_screen_renderer.h  emulator_globals.h  memory_processor.cpp
mini_mips/src/helpers/: log.h
src/asm2bin/: asm2bin_globals.h  assembly_converter.h
src/emulator/: CMakeLists.txt  binary_processor.cpp  emulator.cpp  memory_processor.h
src/helpers/: globals.h  option_parser.h  print_helpers.h
